--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
 
     <section id="mainvisual" class="mainvisual">
-        <video class="mainvisual__video" src="../video/Video1.mp4" autoplay muted loop></video>
-        <video class="mainvisual__video" src="../video/Video2.mp4" autoplay muted loop></video>
-        <video class="mainvisual__video" src="../video/Video3.mp4" autoplay muted loop></video>
+        <video class="mainvisual__video" src="video/Video1.mp4" autoplay muted loop></video>
+        <video class="mainvisual__video" src="video/Video2.mp4" autoplay muted loop></video>
+        <video class="mainvisual__video" src="video/Video3.mp4" autoplay muted loop></video>
 
 
         <div class="mainvisual__content">
@@ -44,7 +44,7 @@
 
     <header id="header" class="header">
         <div class="header__inner">
-            <a href="/index.html"><img src="./images/logo.svg" alt="ロゴ"></a>
+            <a href="index.html"><img src="./images/logo.svg" alt="ロゴ"></a>
 
             <button class="header__hamburger hamburger" id="js-hamburger">
                 <span></span>
