--- a/feature.html
+++ b/feature.html
@@ -7,9 +7,9 @@
     <title>株式会社アンカー建設</title>
 
     <!-- css -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/common.css">
+     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="common.css">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
