--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@
                 </div>
                 <ul class="service__list">
                     <li class="service__item">
-                        <a href=""><img src="./images/service01.png" alt="建築事業"></a>
+                        <a href=""><img src="images/service01.png" alt="建築事業"></a>
                         <p>建築事業<span>Architecture</span></p>
                     </li>
                     <li class="service__item">
-                        <a href=""><img src="./images/service02.png" alt="土木事業"></a>
+                        <a href=""><img src="images/service02.png" alt="土木事業"></a>
                         <p>土木事業<span>Civil engineering</span></p>
                     </li>
                     <li class="service__sub-item">
-                        <a href=""><img src="./images/service03.png" alt="外部講師事業"></a>
+                        <a href=""><img src="images/service03.png" alt="外部講師事業"></a>
                         <p>外部講師事業</p>
                     </li>
                     <li class="service__sub-item">
-                        <a href=""><img src="./images/service04.png" alt="PC事業"></a>
+                        <a href=""><img src="images/service04.png" alt="PC事業"></a>
                         <p>PC事業</p>
                     </li>
                     <li class="service__sub-item">
-                        <a href=""><img src="./images/service05.png" alt="森林保護事業"></a>
+                        <a href=""><img src="images/service05.png" alt="森林保護事業"></a>
                         <p>森林保護事業</p>
                     </li>
                 </ul>
